# spec-ai

./: .aiignore  .dockerignore  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  VERIFY.md  config.toml  config.toml.example  spec-ai.config.toml
.github/: CI.Dockerfile
.github/workflows/: ci.yml  macos-app.yml  release.yml
crates/spec-ai/: Cargo.toml  spec-ai.config.toml
crates/spec-ai-api/: Cargo.toml  README.md
crates/spec-ai-api/src/: lib.rs
crates/spec-ai-api/src/api/: auth.rs  graph_handlers.rs  handlers.rs  mesh.rs  middleware.rs  mod.rs  models.rs  server.rs  sync_handlers.rs  tls.rs
crates/spec-ai-api/src/sync/: coordinator.rs  mod.rs
crates/spec-ai-cli/: Cargo.toml
crates/spec-ai-cli/src/: lib.rs
crates/spec-ai-collective/: Cargo.toml  README.md
crates/spec-ai-collective/src/: capability.rs  consensus.rs  delegation.rs  learning.rs  lib.rs  orchestration.rs  specialization.rs  types.rs
crates/spec-ai-config/: Cargo.toml  spec-ai.config.toml
crates/spec-ai-config/src/: lib.rs  types.rs
crates/spec-ai-config/src/config/: agent.rs  agent_config.rs  cache.rs  mod.rs
crates/spec-ai-config/src/persistence/: migrations.rs  mod.rs
crates/spec-ai-config/src/sync/: mod.rs  vector_clock.rs
crates/spec-ai-core/: Cargo.toml
crates/spec-ai-core/src/: lib.rs  mesh.rs
crates/spec-ai-core/src/agent/: builder.rs  core.rs  factory.rs  model.rs
crates/spec-ai-core/src/agent/providers/: anthropic.rs  lmstudio.rs  mlx.rs  mod.rs  ollama.rs
crates/spec-ai-core/src/agent/transcription_providers/: vttrs.rs
crates/spec-ai-core/src/bootstrap_self/plugins/: toak_tokenizer.rs
crates/spec-ai-core/src/cli/: formatting.rs  mod.rs
crates/spec-ai-core/src/sync/: engine.rs  mod.rs  persistence_impl.rs  protocol.rs  resolver.rs
crates/spec-ai-core/src/tools/: mod.rs
crates/spec-ai-core/src/tools/builtin/: calculator.rs  code_search.rs  collective.rs  (+8 more)
crates/spec-ai-desktop/: Cargo.toml  README.md
crates/spec-ai-desktop/src/: main.rs
crates/spec-ai-graph-sync/: Cargo.toml  README.md
crates/spec-ai-graph-sync/src/: engine.rs  lib.rs  persistence.rs  protocol.rs  resolver.rs  types.rs
crates/spec-ai-knowledge-graph/src/: graph_store.rs  lib.rs
crates/spec-ai-oui/: Cargo.toml  README.md
crates/spec-ai-oui-app/: Cargo.toml  README.md
crates/spec-ai-oui-app/src/: handlers.rs  lib.rs  main.rs  receiver.rs  state.rs  telemetry.rs
crates/spec-ai-oui-app/src/ui/: agent_status.rs  mission_brief.rs  mod.rs  tactical_hud.rs  target_system.rs
crates/spec-ai-oui-app/visionOS/: .gitignore
crates/spec-ai-oui/src/: lib.rs
crates/spec-ai-oui/src/animation/: easing.rs  mod.rs  tween.rs
crates/spec-ai-oui/src/app/: framework.rs  mod.rs
crates/spec-ai-oui/src/audio/: backend.rs  mod.rs  notification.rs
crates/spec-ai-oui/src/context/: attention.rs  density.rs  mod.rs  mode.rs  priority.rs
crates/spec-ai-oui/src/input/: event.rs  gaze.rs  gesture.rs  head.rs  mod.rs  simulator.rs  voice.rs
crates/spec-ai-oui/src/layout/: mod.rs  screen_space.rs  spatial.rs  zone.rs
crates/spec-ai-oui/src/renderer/: backend.rs  mod.rs  surface.rs
crates/spec-ai-oui/src/renderer/terminal/: backend.rs  mod.rs  projection.rs
crates/spec-ai-oui/src/spatial/: anchor.rs  bounds.rs  mod.rs  point3d.rs  quaternion.rs  transform.rs  vector3d.rs
crates/spec-ai-oui/src/theme/: glass.rs  mod.rs  palette.rs
crates/spec-ai-oui/src/widget/: mod.rs  traits.rs
crates/spec-ai-oui/src/widget/anchored/: label.rs  marker.rs  mod.rs  waypoint.rs
crates/spec-ai-oui/src/widget/effects/: fade.rs  glow.rs  mod.rs  scan_line.rs
crates/spec-ai-oui/src/widget/floating/: card.rs  menu.rs  mod.rs  tooltip.rs
crates/spec-ai-oui/src/widget/hud/: compass.rs  indicator.rs  mod.rs  panel.rs  reticle.rs
crates/spec-ai-plugin/: README.md
crates/spec-ai-policy/: Cargo.toml
crates/spec-ai-policy/src/plugin/: mod.rs
crates/spec-ai-policy/src/policy/: mod.rs
crates/spec-ai-tui/: README.md
crates/spec-ai-tui-app/: Cargo.toml  README.md
crates/spec-ai-tui-app/src/: backend.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs  ui.rs
crates/spec-ai-tui/examples/: demo.rs
crates/spec-ai-tui/examples/demo/: handlers.rs  state.rs  ui.rs
crates/spec-ai-tui/src/: lib.rs
crates/spec-ai-tui/src/style/: markdown.rs  mod.rs
crates/spec-ai/src/: lib.rs
docs/: AGENTS.md  ARCHITECTURE.md  COLLECTIVE_INTELLIGENCE.md  CONFIGURATION.md  SELF-INIT.md  SETUP.md  VERIFY.md
examples/: agent_web_scraper.rs  basic_agent.rs  multi_model_performance.rs  test_prompt_user.rs
examples/code/: multi_model_performance.rs  test_prompt_user.rs  test_web_scraper.rs
examples/configs/: config.graph.example.toml  config.lmstudio.toml  config.multi_model.example.toml  config.openai.example.toml  config.toml.example
scripts/: bump-version.sh  publish-ci-image.sh  publish.sh  setup-auth.sh
src/: bootstrap_self.rs  embeddings.rs  lib.rs  main.rs  spec.rs  test_utils.rs  types.rs
src/agent/: builder.rs  core.rs  factory.rs  mod.rs  model.rs
src/agent/providers/: anthropic.rs  mlx.rs  mock.rs  mod.rs  ollama.rs  openai.rs
src/api/: handlers.rs  mesh.rs  middleware.rs  mod.rs  models.rs  server.rs
src/bootstrap_self/plugins/: universal_code.rs
src/cli/: formatting.rs  mod.rs
src/config/: agent.rs  agent_config.rs  cache.rs  mod.rs  registry.rs
src/persistence/: migrations.rs  mod.rs
src/plugin/: mod.rs
src/policy/: mod.rs
src/sync/: engine.rs  resolver.rs  vector_clock.rs
src/tools/: mod.rs
src/tools/builtin/: audio_transcription.rs  echo.rs  file_extract.rs  file_read.rs  file_write.rs  math.rs  mesh_communication.rs  mod.rs  prompt.rs  search.rs  shell.rs  web_scraper.rs  web_search.rs
tests/: audio_transcription_tests.rs  bootstrap_self_tests.rs  cli_tests.rs  config_tests.rs  persistence_tests.rs  policy_integration_tests.rs  spec_integration_tests.rs  tool_integration_tests.rs
tests/fixtures/config/: invalid_provider.toml  invalid_temperature.toml  valid_basic.toml  valid_with_agents.toml
vm/: Containerfile  Slim.Containerfile  compose.yml
(+1 files in other folders)
