[package]
name = "spec-ai-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
spec-ai-core = { path = "../spec-ai-core" }
spec-ai-config = { path = "../spec-ai-config" }
spec-ai-policy = { path = "../spec-ai-policy" }
