[package]
name = "spec-ai-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API for spec-ai framework"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = { workspace = true }
chrono = { workspace = true }
dirs-next = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toak-rs = { workspace = true }
tokio-rustls = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
spec-ai-core = { path = "../spec-ai-core", version = "0.6.0-prerelease.11", features = ["api"] }
spec-ai-config = { path = "../spec-ai-config", version = "0.6.0-prerelease.11" }
spec-ai-knowledge-graph = { path = "../spec-ai-knowledge-graph", version = "0.6.0-prerelease.11" }
spec-ai-policy = { path = "../spec-ai-policy", version = "0.6.0-prerelease.11" }

[dev-dependencies]
tempfile = { workspace = true }
