[package]
name = "spec-ai-collective"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Emergent collective intelligence for spec-ai agents"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# Internal dependencies
spec-ai-knowledge-graph = { path = "../spec-ai-knowledge-graph", version = "0.6.0-prerelease.10" }
