[package]
name = "spec-ai-oui-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Demo application for spec-ai-oui optical interface framework"

[[bin]]
name = "oui-demo"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
spec-ai-oui = { path = "../spec-ai-oui", version = "0.6.0-prerelease.2" }
tokio = { workspace = true }
