[package]
name = "spec-ai-oui-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Demo application for spec-ai-oui optical interface framework"

[[bin]]
name = "oui-demo"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
spec-ai-oui = { path = "../spec-ai-oui", version = "0.6.0-prerelease.11" }
tokio = { workspace = true }

# OpenTelemetry for receiving telemetry streams
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace"] }
tonic = "0.14"
prost = "0.14"
prost-types = "0.13"

# Async utilities
futures = { workspace = true }
