[package]
name = "spec-ai-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
spec-ai-config = { path = "../spec-ai-config" }

[dev-dependencies]
spec-ai-core = { path = "../spec-ai-core" }
