[package]
name = "spec-ai-tui-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive terminal UI for spec-ai built on spec-ai-tui"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
spec-ai-core = { path = "../spec-ai-core", version = "0.6.0-prerelease.10", features = ["openai", "vttrs"] }
spec-ai-tui = { path = "../spec-ai-tui", version = "0.6.0-prerelease.10" }
tokio = { workspace = true }
strip-ansi-escapes = "0.1"
